feat: JWT generate token service implemented in User service

--- a/.env.development
+++ b/.env.development
@@ -2,3 +2,5 @@ NODE_ENV=development
 PORT=3000
 MONGODB_URI=mongodb://admin:admin123@localhost:27017
 MONGODB_DB_NAME=exchange_db
+JWT_SECRET=my-little-dirty-secret
+JWT_EXPIRES_IN=24h
